@@ -87,6 +87,7 @@ phase    = build
 type     = gfm
 filename = README.md
 location = build
+add_prereqs = 0
 
 [CopyFilesFromBuild]
 copy = LICENSE
